--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "merge-jsons-webpack-plugin": "2.0.1",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   },
